修复Port和Signal的Bug